[package]
name = "Hyperion"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
log = "0.4.28"
cgmath = "0.18.0"
png = "0.18.0"
pretty_env_logger = "0.5.0"
thiserror = "2.0.16"
tobj = { version = "3.2.5", features = ["log"]}
vulkanalia = { version = "0.29.0", features = ["window", "libloading"] }
winit = {version = "0.30.12", features = ["rwh_06"]}